# gadgets

./: .gitignore  .licenserc.yaml  .metadata  README.md  pubspec.yaml  run-inxi
.github/workflows/: flutter-ci.yml  snap.yml  test.yml
android/app/: build.gradle
detarball/: Cargo.toml  index.html  pubspec.yaml
detarball/dart/: pubspec.yaml
detarball/include/: detarball_bridge_generated.h
detarball/lib/: detarball_bridge_generated.dart  (+1 more)
detarball/rust/: Cargo.toml  build.rs  index.html
detarball/rust/src/: detarball.rs  detarball_bridge_generated.io.rs  detarball_bridge_generated.rs  lib.rs
detarball/rust/test/fixture/: submission.tar.xz
device-tree-lib/: analysis_options.yaml  build.yaml  foo.tar.xz  pipe.dart  pubspec.yaml
device-tree-reporter/: pubspec.yaml
device-tree-reporter-lib/: pubspec.yaml
lib/: app_controller.dart  app_controller_provider.dart  battery_view.dart  c3_client.dart  certification_status.dart  certification_status_provider.dart  color_modifications.dart  cpu_flags_view.dart  cpu_view.dart  custom_tree_view.dart  device_report_controller.dart  device_report_controller_provider.dart  device_tree_view.dart  example_data.dart  home_page.dart  main.dart  partition_view.dart  rounded_rectangle_background.dart  sample_tree.dart  submission_archive.dart  usb_device_view.dart  widgets.dart
linux/: CMakeLists.txt  my_application.cc
snap/: snapcraft.yaml
stories/: battery_stories.dart  device_stories.dart  partition_stories.dart  sample_button_stories.dart
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+416 files in other folders)
